添加友情链接

--- a/_config.yml
+++ b/_config.yml
@@ -114,6 +114,10 @@ friends: [
         title: "九仞之行",
         href: "https://styunlen.cn/"
     },
+     {
+        title: "yin-blog",
+        href: "http://quanjun.autuan.top/"
+    },
 ]
 
 # 备案号
