更新邮箱地址

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Autuan's Blog
 SEOTitle: 晚成的技术小站| 晚成的博客 |  Autuan's Blog | Autuan | autuan
 header-img: img/post-bg-desk.jpg
-email: autuan.yu@gmail.com
+email: yu@autuan.top
 description: "休息,再出发"
 keyword: "晚成的技术小站, 晚成的博客, autuan, 晚成, Java8, JS, Java"
 url: "http://autuan.github.io"          # your host, for absolute URL
