添加友情链接

--- a/_config.yml
+++ b/_config.yml
@@ -118,6 +118,10 @@ friends: [
         title: "yin-blog",
         href: "http://quanjun.autuan.top/"
     },
+    {
+        title: "慢羊羊6379.*?",
+        href: "https://blog.csdn.net/weixin_49088841"
+    },
 ]
 
 # 备案号
