--- a/_config.yml
+++ b/_config.yml
@@ -107,8 +107,8 @@ friends: [
         href: "https://www.jianshu.com/u/4fd7c15d9319"
     },
     {
-        title: "啦啦啦飞飞",
-        href: "http://www.lalalafeifei.top/"
+        title: "晓雨杂记",
+        href: "https://www.lihaoyu.cn/"
     },
     {
         title: "九仞之行",
